Text nodes assigned to a linked slot are not clickable https://bugs.webkit.org/show_bug.cgi?id=162091 <rdar://problem/28383300>

Reviewed by Antti Koivisto.

Source/WebCore:

The bug was caused by updateMouseEventTargetNode adjusting the target to its parent element when
the original target was a text node. Fixed the bug by using the parent element in the composed tree.

Also fixed the bug that the hit testing was not finding the anchor element and keeping the cursor
in I-beam by traversing the composed tree instead.

Test: fast/shadow-dom/click-text-inside-linked-slot.html

* dom/Node.cpp:
(WebCore::Node::enclosingLinkEventParentOrSelf): Fixed the cursor problem.
* page/EventHandler.cpp:
(WebCore::EventHandler::updateMouseEventTargetNode): Fixed the activation problem.

LayoutTests:

Added a regression test for clicking inside a text node assigned to a slot inside a hyperlink.

Unfortunately, there is not a way to make this a W3C style test until the web platform tests
start supporting WebDriver.

* fast/shadow-dom/click-text-inside-linked-slot-expected.txt: Added.
* fast/shadow-dom/click-text-inside-linked-slot.html: Added.
* platform/ios-simulator-wk2/TestExpectations:

Canonical link: https://commits.webkit.org/180687@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@206605 268f45cc-cd09-0410-ab3c-d52691b4dbfc